--- a/env.yml
+++ b/env.yml
@@ -1,19 +1,57 @@
 name: mlbasic
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py38h33210d7_2
+  - asttokens=2.0.8=pyhd8ed1ab_0
+  - attrs=22.1.0=pyh71513ae_1
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - blas=2.116=openblas
+  - blas-devel=3.9.0=16_osxarm64_openblas
+  - bleach=5.0.1=pyhd8ed1ab_0
   - brotli=1.0.9=h1c322ee_7
   - brotli-bin=1.0.9=h1c322ee_7
   - bzip2=1.0.8=h3422bc3_4
   - ca-certificates=2022.9.24=h4653dfc_0
   - certifi=2022.9.24=pyhd8ed1ab_0
+  - cffi=1.15.1=py38h0e10f82_0
   - contourpy=1.0.5=py38h9dc3d6a_0
   - cycler=0.11.0=pyhd8ed1ab_0
+  - debugpy=1.6.3=py38hdba0465_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=1.1.0=pyhd8ed1ab_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
   - fonttools=4.37.3=py38hb991d35_0
   - freetype=2.12.1=hd633e50_0
+  - giflib=5.2.1=h1a28f6b_0
+  - icu=70.1=h6b3803e_0
+  - imageio=2.22.0=pyhfa7a67d_0
+  - importlib-metadata=4.11.4=py38h10201cd_0
+  - importlib_resources=5.9.0=pyhd8ed1ab_0
+  - ipykernel=6.16.0=pyh736e0ef_0
+  - ipython=8.5.0=pyhd1c38e8_1
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=8.0.2=pyhd8ed1ab_1
+  - jedi=0.18.1=pyhd8ed1ab_2
+  - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.2.0=pyhd8ed1ab_0
   - jpeg=9e=he4db4b2_2
+  - jsonschema=4.16.0=pyhd8ed1ab_0
+  - jupyter=1.0.0=py38h10201cd_7
+  - jupyter_client=7.3.5=pyhd8ed1ab_0
+  - jupyter_console=6.4.4=pyhd8ed1ab_0
+  - jupyter_core=4.11.1=py38h10201cd_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.3=pyhd8ed1ab_0
   - kiwisolver=1.4.4=py38haa2428a_0
   - lcms2=2.12=had6a04f_0
   - lerc=4.0.0=h9a09cb3_0
@@ -22,48 +60,98 @@ dependencies:
   - libbrotlidec=1.0.9=h1c322ee_7
   - libbrotlienc=1.0.9=h1c322ee_7
   - libcblas=3.9.0=16_osxarm64_openblas
-  - libcxx=14.0.6=h848a8c0_0
-  - libdeflate=1.13=h57fd34a_0
-  - libffi=3.4.2=hc377ac9_4
+  - libcxx=14.0.6=h2692d47_0
+  - libdeflate=1.14=h1a8c8d9_0
+  - libffi=3.4.2=h3422bc3_5
   - libgfortran=5.0.0=11_3_0_hd922786_25
   - libgfortran5=11.3.0=hdaf2cc0_25
+  - libiconv=1.17=he4db4b2_0
   - liblapack=3.9.0=16_osxarm64_openblas
+  - liblapacke=3.9.0=16_osxarm64_openblas
   - libopenblas=0.3.21=openmp_hc731615_3
   - libpng=1.6.38=h76d750c_0
-  - libtiff=4.4.0=hd6ca8d7_3
+  - libsodium=1.0.18=h27ca646_1
+  - libsqlite=3.39.3=h76d750c_0
+  - libtiff=4.4.0=hfa0b094_4
+  - libwebp=1.2.4=h328b37c_0
   - libwebp-base=1.2.4=h57fd34a_0
   - libxcb=1.13=h9b22ae9_1004
+  - libxml2=2.10.2=ha9542bf_1
+  - libxslt=1.1.35=ha8fb468_0
   - libzlib=1.2.12=h03a7124_3
   - llvm-openmp=14.0.4=hd125106_0
+  - lxml=4.9.1=py38he5c2ac2_0
+  - markupsafe=2.1.1=py38h33210d7_1
   - matplotlib=3.6.0=py38h150bfb4_0
   - matplotlib-base=3.6.0=py38hbbe890c_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mistune=2.0.4=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h1a28f6b_3
+  - nbclient=0.6.8=pyhd8ed1ab_0
+  - nbconvert=7.0.0=pyhd8ed1ab_0
+  - nbconvert-core=7.0.0=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.0.0=pyhd8ed1ab_0
+  - nbformat=5.6.1=pyhd8ed1ab_0
+  - ncurses=6.3=h07bb92c_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - notebook=6.4.12=pyha770c72_0
   - numpy=1.20.3=py38hbf7bb01_1
+  - openblas=0.3.21=openmp_hf78f355_3
   - openjpeg=2.5.0=h5d4e404_1
   - openssl=3.0.5=h03a7124_2
   - packaging=21.3=pyhd8ed1ab_0
-  - pillow=9.2.0=py38h96fe7ce_2
-  - pip=22.1.2=py38hca03da5_0
+  - pandoc=2.12=hca03da5_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.0.1=py38h4d1bdd5_0
+  - pip=22.2.2=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - prometheus_client=0.14.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.31=pyha770c72_0
+  - prompt_toolkit=3.0.31=hd8ed1ab_0
+  - psutil=5.9.2=py38hb991d35_0
   - pthread-stubs=0.4=h27ca646_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.13.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyrsistent=0.18.1=py38h33210d7_1
   - python=3.8.13=hd3575e6_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
-  - readline=8.1.2=h1a28f6b_1
+  - pyzmq=24.0.1=py38hb72be9f_0
+  - readline=8.1.2=h46ed386_0
   - scikit-learn=1.1.2=py38h6e93f71_0
-  - scipy=1.9.1=py38h3aeb131_0
-  - setuptools=63.4.1=py38hca03da5_0
+  - scipy=1.7.3=py38h2f0f56f_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=65.4.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.39.2=h1058600_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sqlite=3.39.3=h2229b38_0
+  - stack_data=0.5.1=pyhd8ed1ab_0
+  - terminado=0.15.0=py38h10201cd_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.12=hb8d0fd4_0
+  - tinycss2=1.1.1=pyhd8ed1ab_0
+  - tk=8.6.12=he1e0b03_0
   - tornado=6.2=py38he5c2ac2_0
+  - traitlets=5.4.0=pyhd8ed1ab_0
+  - typing_extensions=4.3.0=pyha770c72_0
   - unicodedata2=14.0.0=py38h33210d7_1
-  - wheel=0.37.1=pyhd3eb1b0_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.3=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h27ca646_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
-  - xz=5.2.5=h1a28f6b_1
-  - zlib=1.2.12=h5a0b063_3
+  - xz=5.2.6=h57fd34a_0
+  - zeromq=4.3.4=hbdafb3b_1
+  - zipp=3.8.1=pyhd8ed1ab_0
+  - zlib=1.2.12=h03a7124_3
   - zstd=1.5.2=h8128057_4
+  - pip:
+    - python-mnist==0.7
 prefix: /opt/anaconda3/envs/mlbasic
